2010-07-05  Susanne Moog  <typo3@susanne-moog.de>

	* Follow-up to #14705: In BE login form labels: position of caps lock warning  (thanks to Steffen Gebert)

2010-07-05  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #10958: Broken i18n_parent relation upon localizing records in workspace (Thanks to Tolleiv Nietsch)
	* Fixed bug #14907: Help Modules can not be disabled on a per user basis (Thanks to Georg Ringer)
	* Fixed bug #14957: Styling of record history (Thanks to Georg Ringer)

2010-07-04  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #14929: htmlArea RTE: Font Family and Font Size Dropdown boxes don't open
	* Fixed bug #14996: htmlArea RTE: Clicking in drop down boxes should mark text

2010-07-02  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #14947: Missing closing div in db_new_content_el.php (Thanks to Georg Ringer)

2010-06-29  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #14810: Follow-up to bug #13670: Export module does not keep pagetree configuration (exports only the page tree) (Thanks to Thomas Juhnke) 

2010-06-29  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #14905: htmlArea RTE: Image dialogue shows tab "Current picture" when there is no current image

2010-06-29  Steffen Kamper  <info@sk-typo3.de>

	* Follow-up to #14553: topFrameH configuration option doesn't work anymore
	
2010-06-28  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #14830: htmlArea RTE: Entering line breaks with Safari not possible

2010-06-27  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #14886: htmlArea RTE: Incorrect function scope when error is raised
	* Fixed bug #14887: htmlArea RTE: RTE may be started before style sheets are loaded

2010-06-26  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #14876: htmlArea RTE: SelectFont plugin may cause js error
	* Follow-up to bug #14793: htmlArea RTE: Problematic icons in IE6

2010-06-25  Steffen Kamper  <info@sk-typo3.de>
